src/messages.h

struct mdhim_t;
/* Base message */
struct mdhim_basem_t {
	//Message type
	int mtype; 
	int server_rank;
	int size;
	int index;
	int index_type;
};
/* Bulk delete record message */
struct mdhim_bdelm_t {
	int mtype;  
	int server_rank;
	int size;
	int index;
	int index_type;
	void **keys;
	int *key_lens;
	int num_keys;
};
/* Generic receive message */
struct mdhim_rm_t {
	int mtype;  
	int server_rank;
	int size;
	int index;
	int index_type;
	int error;
};
int pack_bdel_message(struct mdhim_t *md, struct mdhim_bdelm_t *bdm, void **sendbuf, int *sendsize);
int unpack_del_message(struct mdhim_t *md, void *message, int mesg_size, void **dm);
int unpack_bdel_message(struct mdhim_t *md, void *message, int mesg_size, void **bdm);
int pack_return_message(struct mdhim_t *md, struct mdhim_rm_t *rm, void **sendbuf, int *sendsize);
int unpack_return_message(struct mdhim_t *md, void *message, void **rm);
int pack_base_message(struct mdhim_t *md, struct mdhim_basem_t *cm, void **sendbuf, int *sendsize);
void mdhim_full_release_msg(void *message);
void mdhim_partial_release_msg(void *message);