java_api/MdhimLibrary.java

	/**
	 * Original signature : <code>int pack_bdel_message(mdhim_t*, mdhim_bdelm_t*, void**, int*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1205</i>
	 */
	public static int pack_bdel_message(Pointer<mdhim_t > md, Pointer<mdhim_bdelm_t > bdm, Pointer<Pointer<? > > sendbuf, Pointer<Integer > sendsize) {
		return pack_bdel_message(Pointer.getPeer(md), Pointer.getPeer(bdm), Pointer.getPeer(sendbuf), Pointer.getPeer(sendsize));
	}
	protected native static int pack_bdel_message(@Ptr long md, @Ptr long bdm, @Ptr long sendbuf, @Ptr long sendsize);
	/**
	 * Original signature : <code>int unpack_del_message(mdhim_t*, void*, int, void**)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1207</i>
	 */
	public static int unpack_del_message(Pointer<mdhim_t > md, Pointer<? > message, int mesg_size, Pointer<Pointer<? > > dm) {
		return unpack_del_message(Pointer.getPeer(md), Pointer.getPeer(message), mesg_size, Pointer.getPeer(dm));
	}
	protected native static int unpack_del_message(@Ptr long md, @Ptr long message, int mesg_size, @Ptr long dm);
	/**
	 * Original signature : <code>int unpack_bdel_message(mdhim_t*, void*, int, void**)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1209</i>
	 */
	public static int unpack_bdel_message(Pointer<mdhim_t > md, Pointer<? > message, int mesg_size, Pointer<Pointer<? > > bdm) {
		return unpack_bdel_message(Pointer.getPeer(md), Pointer.getPeer(message), mesg_size, Pointer.getPeer(bdm));
	}
	protected native static int unpack_bdel_message(@Ptr long md, @Ptr long message, int mesg_size, @Ptr long bdm);
	/**
	 * Original signature : <code>int pack_return_message(mdhim_t*, mdhim_rm_t*, void**, int*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1211</i>
	 */
	public static int pack_return_message(Pointer<mdhim_t > md, Pointer<mdhim_rm_t > rm, Pointer<Pointer<? > > sendbuf, Pointer<Integer > sendsize) {
		return pack_return_message(Pointer.getPeer(md), Pointer.getPeer(rm), Pointer.getPeer(sendbuf), Pointer.getPeer(sendsize));
	}
	protected native static int pack_return_message(@Ptr long md, @Ptr long rm, @Ptr long sendbuf, @Ptr long sendsize);
	/**
	 * Original signature : <code>int unpack_return_message(mdhim_t*, void*, void**)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1213</i>
	 */
	public static int unpack_return_message(Pointer<mdhim_t > md, Pointer<? > message, Pointer<Pointer<? > > rm) {
		return unpack_return_message(Pointer.getPeer(md), Pointer.getPeer(message), Pointer.getPeer(rm));
	}
	protected native static int unpack_return_message(@Ptr long md, @Ptr long message, @Ptr long rm);
	/**
	 * Original signature : <code>int pack_base_message(mdhim_t*, mdhim_basem_t*, void**, int*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1215</i>
	 */
	public static int pack_base_message(Pointer<mdhim_t > md, Pointer<mdhim_basem_t > cm, Pointer<Pointer<? > > sendbuf, Pointer<Integer > sendsize) {
		return pack_base_message(Pointer.getPeer(md), Pointer.getPeer(cm), Pointer.getPeer(sendbuf), Pointer.getPeer(sendsize));
	}
	protected native static int pack_base_message(@Ptr long md, @Ptr long cm, @Ptr long sendbuf, @Ptr long sendsize);
	/**
	 * Original signature : <code>void mdhim_full_release_msg(void*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1217</i>
	 */
	public static void mdhim_full_release_msg(Pointer<? > message) {
		mdhim_full_release_msg(Pointer.getPeer(message));
	}
	protected native static void mdhim_full_release_msg(@Ptr long message);
	/**
	 * Original signature : <code>void mdhim_partial_release_msg(void*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/messages.h:1219</i>
	 */
	public static void mdhim_partial_release_msg(Pointer<? > message) {
		mdhim_partial_release_msg(Pointer.getPeer(message));
	}
	protected native static void mdhim_partial_release_msg(@Ptr long message);
	/**
	 * Original signature : <code>mdhim_options_t* mdhim_options_init()</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_options.h:1242</i>
	 */
	public static Pointer<mdhim_options_t > mdhim_options_init() {
		return (Pointer)Pointer.pointerToAddress(mdhim_options_init$2(), mdhim_options_t.class);
	}
	@Ptr 
	@Name("mdhim_options_init") 
	protected native static long mdhim_options_init$2();
	/**
	 * Original signature : <code>void mdhim_options_set_db_path(mdhim_options_t*, char*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_options.h:1244</i>
	 */
	public static void mdhim_options_set_db_path(Pointer<mdhim_options_t > opts, Pointer<Byte > path) {
		mdhim_options_set_db_path(Pointer.getPeer(opts), Pointer.getPeer(path));
	}
	protected native static void mdhim_options_set_db_path(@Ptr long opts, @Ptr long path);
	/**
	 * Original signature : <code>void mdhim_options_set_db_paths(mdhim_options_t*, char**, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_options.h:1246</i>
	 */
	public static void mdhim_options_set_db_paths(Pointer<mdhim_options_t > opts, Pointer<Pointer<Byte > > paths, int num_paths) {
		mdhim_options_set_db_paths(Pointer.getPeer(opts), Pointer.getPeer(paths), num_paths);
	}
	protected native static void mdhim_options_set_db_paths(@Ptr long opts, @Ptr long paths, int num_paths);
	/**
	 * Original signature : <code>void mdhim_options_set_db_name(mdhim_options_t*, char*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_options.h:1248</i>
	 */
	public static void mdhim_options_set_db_name(Pointer<mdhim_options_t > opts, Pointer<Byte > name) {
		mdhim_options_set_db_name(Pointer.getPeer(opts), Pointer.getPeer(name));
	}
	protected native static void mdhim_options_set_db_name(@Ptr long opts, @Ptr long name);
	/**
	 * Original signature : <code>void mdhim_options_set_db_type(mdhim_options_t*, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_options.h:1250</i>
	 */
	public static void mdhim_options_set_db_type(Pointer<mdhim_options_t > opts, int type) {
		mdhim_options_set_db_type(Pointer.getPeer(opts), type);
	}
	protected native static void mdhim_options_set_db_type(@Ptr long opts, int type);
	/**
	 * Original signature : <code>void mdhim_options_set_key_type(mdhim_options_t*, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_options.h:1252</i>
	 */
	public static void mdhim_options_set_key_type(Pointer<mdhim_options_t > opts, int key_type) {
		mdhim_options_set_key_type(Pointer.getPeer(opts), key_type);
	}
	protected native static void mdhim_options_set_key_type(@Ptr long opts, int key_type);
	/**
	 * Original signature : <code>void mdhim_options_set_create_new_db(mdhim_options_t*, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_options.h:1254</i>
	 */
	public static void mdhim_options_set_create_new_db(Pointer<mdhim_options_t > opts, int create_new) {
		mdhim_options_set_create_new_db(Pointer.getPeer(opts), create_new);
	}
	protected native static void mdhim_options_set_create_new_db(@Ptr long opts, int create_new);
	/**
	 * Original signature : <code>void mdhim_options_set_login_c(mdhim_options_t*, char*, char*, char*, char*, char*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_options.h:1256</i>
	 */
	public static void mdhim_options_set_login_c(Pointer<mdhim_options_t > opts, Pointer<Byte > db_hl, Pointer<Byte > db_ln, Pointer<Byte > db_pw, Pointer<Byte > dbs_ln, Pointer<Byte > dbs_pw) {
		mdhim_options_set_login_c(Pointer.getPeer(opts), Pointer.getPeer(db_hl), Pointer.getPeer(db_ln), Pointer.getPeer(db_pw), Pointer.getPeer(dbs_ln), Pointer.getPeer(dbs_pw));
	}
	protected native static void mdhim_options_set_login_c(@Ptr long opts, @Ptr long db_hl, @Ptr long db_ln, @Ptr long db_pw, @Ptr long dbs_ln, @Ptr long dbs_pw);
	/**
	 * Original signature : <code>void mdhim_options_set_debug_level(mdhim_options_t*, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_options.h:1258</i>
	 */
	public static void mdhim_options_set_debug_level(Pointer<mdhim_options_t > opts, int dbug) {
		mdhim_options_set_debug_level(Pointer.getPeer(opts), dbug);
	}
	protected native static void mdhim_options_set_debug_level(@Ptr long opts, int dbug);
	/**
	 * Original signature : <code>void mdhim_options_set_value_append(mdhim_options_t*, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_options.h:1260</i>
	 */
	public static void mdhim_options_set_value_append(Pointer<mdhim_options_t > opts, int append) {
		mdhim_options_set_value_append(Pointer.getPeer(opts), append);
	}
	protected native static void mdhim_options_set_value_append(@Ptr long opts, int append);
	/**
	 * Original signature : <code>void mdhim_options_set_server_factor(mdhim_options_t*, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_options.h:1262</i>
	 */
	public static void mdhim_options_set_server_factor(Pointer<mdhim_options_t > opts, int server_factor) {
		mdhim_options_set_server_factor(Pointer.getPeer(opts), server_factor);
	}
	protected native static void mdhim_options_set_server_factor(@Ptr long opts, int server_factor);
	/**
	 * Original signature : <code>void mdhim_options_set_max_recs_per_slice(mdhim_options_t*, uint64_t)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_options.h:1264</i>
	 */
	public static void mdhim_options_set_max_recs_per_slice(Pointer<mdhim_options_t > opts, long max_recs_per_slice) {
		mdhim_options_set_max_recs_per_slice(Pointer.getPeer(opts), max_recs_per_slice);
	}
	protected native static void mdhim_options_set_max_recs_per_slice(@Ptr long opts, long max_recs_per_slice);
	/**
	 * Original signature : <code>void mdhim_options_set_num_worker_threads(mdhim_options_t*, int)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_options.h:1266</i>
	 */
	public static void mdhim_options_set_num_worker_threads(Pointer<mdhim_options_t > opts, int num_wthreads) {
		mdhim_options_set_num_worker_threads(Pointer.getPeer(opts), num_wthreads);
	}
	protected native static void mdhim_options_set_num_worker_threads(@Ptr long opts, int num_wthreads);
	/**
	 * Original signature : <code>void mdhim_options_destroy(mdhim_options_t*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/mdhim_options.h:1268</i>
	 */
	public static void mdhim_options_destroy(Pointer<mdhim_options_t > opts) {
		mdhim_options_destroy(Pointer.getPeer(opts));
	}
	protected native static void mdhim_options_destroy(@Ptr long opts);
	/**
	 * Original signature : <code>int update_all_stats(mdhim_t*, index_t*, void*, uint32_t)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/indexes.h:1322</i>
	 */
	public static int update_all_stats(Pointer<mdhim_t > md, Pointer<index_t > bi, Pointer<? > key, int key_len) {
		return update_all_stats(Pointer.getPeer(md), Pointer.getPeer(bi), Pointer.getPeer(key), key_len);
	}
	protected native static int update_all_stats(@Ptr long md, @Ptr long bi, @Ptr long key, int key_len);
	/**
	 * Original signature : <code>int load_stats(mdhim_t*, index_t*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/indexes.h:1324</i>
	 */
	public static int load_stats(Pointer<mdhim_t > md, Pointer<index_t > bi) {
		return load_stats(Pointer.getPeer(md), Pointer.getPeer(bi));
	}
	protected native static int load_stats(@Ptr long md, @Ptr long bi);
	/**
	 * Original signature : <code>int write_stats(mdhim_t*, index_t*)</code><br>
	 * <i>native declaration : mdhim-tng-ycsb/src/indexes.h:1326</i>
	 */
	public static int write_stats(Pointer<mdhim_t > md, Pointer<index_t > bi) {
		return write_stats(Pointer.getPeer(md), Pointer.getPeer(bi));
	}
	protected native static int write_stats(@Ptr long md, @Ptr long bi);
